--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_native_splash: ^2.4.5
   flutter_screenutil: ^5.9.3
+  flutter_launcher_icons: ^0.14.4
+  dotted_border: ^3.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -83,6 +85,10 @@ flutter:
     - family: poppins
       fonts:
         - asset: assets/fonts/poppins/Poppins-Regular.ttf
+        - asset: assets/fonts/poppins/Poppins-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/poppins/Poppins-SemiBold.ttf
+          weight: 600
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
